// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="ui top fixed menu borderless"
>
  <div
    className="link item"
  >
    <img
      alt=""
      className="ui mini image"
      src="https://semantic-ui.com/images/logo.png"
    />
  </div>
  <div
    className="link item"
    onClick={[Function]}
  >
    <i
      className="sidebar icon"
    />
    Menu
  </div>
  <div
    className="ui  category search item"
  >
    <div
      className="ui large icon input"
    >
      <input
        className="prompt"
        placeholder="Search..."
        type="text"
      />
      <i
        className="search link icon"
      />
    </div>
  </div>
  <div
    className="right menu"
  >
    <div
      className="ui simple dropdown  item"
    >
      <img
        alt=""
        className="ui avatar image"
        src="https://semantic-ui.com/images/avatar/small/matt.jpg"
      />
      <span>
        Username
      </span>
       
      <i
        className="dropdown icon"
      />
      <div
        className="menu"
      >
        <div
          className="item link"
        >
          Logout 
          <i
            className="sign-out icon"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with sidebar 1`] = `
Array [
  <div
    className="ui visible sidebar left fixed vertical menu"
  >
    <div
      className="item"
    >
      <img
        alt=""
        className="ui mini image"
        src="https://semantic-ui.com/images/logo.png"
      />
    </div>
    <a
      className="item"
      href="/dashboard"
      onClick={[Function]}
    >
      DashBoard 
      <i
        className="chart line icon"
      />
    </a>
    <a
      className="item"
      href="/starwars"
      onClick={[Function]}
    >
      StarWars 
      <i
        className="star icon"
      />
    </a>
    <a
      className="item"
      href="/avengers"
      onClick={[Function]}
    >
      Avengers 
      <i
        className="nintendo switch icon"
      />
    </a>
    <a
      className="item"
      href="/settings"
      onClick={[Function]}
    >
      Settings 
      <i
        className="cogs icon"
      />
    </a>
  </div>,
  <div
    className="ui top fixed menu borderless"
  >
    <div
      className="link item"
    >
      <img
        alt=""
        className="ui mini image"
        src="https://semantic-ui.com/images/logo.png"
      />
    </div>
    <div
      className="link item"
      onClick={[Function]}
    >
      <i
        className="sidebar icon"
      />
      Menu
    </div>
    <div
      className="ui  category search item"
    >
      <div
        className="ui large icon input"
      >
        <input
          className="prompt"
          placeholder="Search..."
          type="text"
        />
        <i
          className="search link icon"
        />
      </div>
    </div>
    <div
      className="right menu"
    >
      <div
        className="ui simple dropdown  item"
      >
        <img
          alt=""
          className="ui avatar image"
          src="https://semantic-ui.com/images/avatar/small/matt.jpg"
        />
        <span>
          Username
        </span>
         
        <i
          className="dropdown icon"
        />
        <div
          className="menu"
        >
          <div
            className="item link"
          >
            Logout 
            <i
              className="sign-out icon"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
